# fpga-board-sim

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  analyze_metrics.py  board_loader.py  conftest.py  fpga_board.py  generate_board_images.py  pyproject.toml  session_config.py  sim_bridge.py  sim_metrics.py  sim_session_log.py  sim_testbench.py
.github/: dependabot.yml
.github/workflows/: ci.yml
boards/amaranth-boards/: _sync_metadata.json  alchitry_au.json  alchitry_pt_v2.json  alchitry_pt_v2_alpha.json  arrow_deca.json  arty_a7-100.json  arty_a7-35.json  arty_s7-25.json  arty_s7-50.json  arty_z720.json  atlys.json  ax7325_b.json  black_ice.json  black_ice_ii.json  chameleon96.json  cmod_a7-15.json  cmod_a7-35.json  cmod_s7.json  colorlight-5_a75_b-r70.json  cora_z7-07_s.json  cora_z7-10.json  de0.json  de0_cv.json  de0_nano.json  de10_lite.json  de10_nano.json  de1_so_c.json  ebaz4205.json  ecp55_gevn.json  ecpix545.json  ecpix585.json  fomu_hacker.json  fomu_pvt.json  genesys2.json  ice40_hx1_kblink_evn.json  ice40_hx8_kbevn.json  ice40_up5_kbevn.json  icebreaker.json  icebreaker_bitsy.json  icepi_zero1-3.json  (+41 more)
boards/custom/: de10_standard.json  de23_lite.json  de25_standard.json  de2_115.json  veek_mt2.json  veek_mt_sockit.json
boards/digilent-xdc/: _sync_metadata.json  arty.json  arty_a7-100.json  arty_a7-35.json  arty_s7-25.json  arty_s7-50.json  arty_z7-10.json  arty_z7-20.json  basys_3.json  cmod_a7.json  cmod_s7-25.json  cora_z7-07s.json  cora_z7-10.json  eclypse_z7.json  genesys_2.json  genesys_zu-3eg-d.json  genesys_zu-3eg.json  genesys_zu-5ev-d.json  nexys_4.json  nexys_4_ddr.json  nexys_a7-100t.json  nexys_a7-50t.json  nexys_video.json  sword.json  usb104_a7-100t.json  zybo.json  zybo_z7.json
boards/litex-boards/: _sync_metadata.json  adi_adrv2crr_fmc.json  adiuvo_forgix.json  alchitry_au.json  alchitry_au_v2.json  alchitry_mojo.json  alchitry_pt_v2.json  alibaba_xcku3p.json  alientek_davincipro.json  alinx_ax7010.json  (+162 more)
docs/: 7seg_display_plan_draft.md  7seg_display_plan_v2.md  architecture.md  board_native_release_plan.md  docs_assets_improvement_plan.md  embedded_core_build_notes.md  embedded_core_improvement_plan.md  embedded_core_system_guide.md  embedded_core_system_plan.md  improvement_roadmap.md  install.md  roadmap_delivered.md  u21_board_native_vhdl_plan.md  u22_7seg_scan_plan.md  u25_ghdl_perf_profile.md  u34_single_window_plan.md  u35_simulator_picker_plan.md  u9_led_complete_plan.md  user_guide.md  virtual-fpga-boards-cs.adoc  virtual-fpga-boards.adoc  writing_designs.md
firmware/: .gitignore  README.md  cpu_6502.cfg  cpu_irq_counter_7seg.s  cpu_walking_counter_7seg.s  mx65.cfg  mx65_dice_7seg.s  mx65_hello_7seg.s  mx65_irq_counter_7seg.s  mx65_walking_counter_7seg.s  t80_irq_counter_7seg.asm  t80_irq_portio_counter_7seg.asm  t80_portio_counter_7seg.asm  t80_walking_counter_7seg.asm  t80_walking_counter_7seg.sym
hdl/: bad_contract_7seg_extra_seg.vhdl  bad_contract_7seg_missing_seg.vhdl  bad_contract_blinky.vhdl  bad_contract_fixed_width.vhdl  bad_contract_wrong_direction.vhdl  bad_encoding_blinky.vhdl  bad_ghdl_blinky.vhdl  bad_semantic_blinky.vhdl  blinky.vhd  blinky_alt.vhd  blinky_counter.vhd  blinky_morse.vhd  blinky_pwm.vhd  blinky_survey.md  blinky_walking.vhd  counter_7seg.vhd  cpu_irq_counter_7seg.vhd  cpu_walking_counter_7seg.vhd  mx65_dice_7seg.vhd  mx65_hello_7seg.vhd  mx65_irq_counter_7seg.vhd  mx65_walking_counter_7seg.vhd  rgb_rainbow.vhd  snake_7seg.vhd  stopwatch_7seg.vhd  t80_irq_counter_7seg.vhd  t80_irq_portio_counter_7seg.vhd  t80_portio_counter_7seg.vhd  t80_walking_counter_7seg.vhd  walking_counter_7seg.vhd
scripts/: amaranth_parser.py  analyze_metrics.py  capture_common.py  capture_demo.py  capture_screenshot.py  capture_selector.py  capture_waveform.py  check_board_drift.py  digilent_parser.py  framework_conventions.py  gen_embedded_core.py  led_metadata.py  litex_parser.py  regen_embedded_cores.py  sync_amaranth_boards.py  sync_boards.py  sync_common.py  sync_digilent_xdc.py  sync_led_colors.py  sync_litex_boards.py  sync_port_conventions.py
sim/: capture_frames.py  duty_probe.vhd  run_tests.py  sim_testbench.py  sim_testbench_bridge.py  sim_wrapper_7seg_template.vhd  sim_wrapper_template.vhd  smoke_test.py  test_7seg.py  test_blinky.py  test_cpu_dice.py  test_cpu_hello.py  test_cpu_smoke.py  test_cpu_walking.py  test_cpu_wide_led.py  test_duty.py  test_native_scan.py  test_rgb.py  test_stopwatch.py
systems/: cpu_irq_counter_7seg.toml  mx65_dice_7seg.toml  mx65_hello_7seg.toml  mx65_irq_counter_7seg.toml  mx65_walking_counter_7seg.toml  t80_irq_counter_7seg.toml  t80_irq_portio_counter_7seg.toml  t80_portio_counter_7seg.toml  t80_walking_counter_7seg.toml  walking_counter_7seg.toml
tests/: conftest.py  test_board_display_events.py  test_board_display_hover.py  test_board_display_layout.py  test_board_loader.py  test_board_loader_sevenseg.py  test_board_schema.py  test_board_selector.py  test_brightness.py  test_button_widget.py  test_check_board_drift.py  test_controller.py  test_convention_matcher.py  test_convention_polarity_invariant.py  test_digilent_parser.py  test_duty.py  test_embedded_core.py  test_error_dialog.py  test_framework_conventions.py  test_generate_board_images.py  test_ghdl.py  test_help_dialog.py  test_led_metadata.py  test_litex_parser.py  test_native_convention.py  test_native_scan_design.py  test_nvc.py  test_platform_open.py  test_port_convention_parser_boardstore_xml.py  test_port_convention_parser_ccf.py  test_port_convention_parser_cst.py  test_port_convention_parser_lpf.py  test_port_convention_parser_pcf.py  test_port_convention_parser_qsf.py  test_port_convention_parser_ucf.py  test_port_convention_parser_xdc.py  test_port_convention_parsers_classify.py  test_port_convention_parsers_golden.py  test_rgb_design.py  test_screen_results.py  (+32 more)
ui/: __init__.py  board_selector.py  components.py  constants.py  error_dialog.py  fpga_board.py  sim_panel.py  vhdl_picker.py
(+105 files in other folders)
