[project]
name = "fpga-simulator"
version = "0.1.0"
description = "Interactive FPGA board simulator with GHDL-backed VHDL simulation"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5",
    "cocotb>=2.0",
    "find_libpython",
]

[project.scripts]
fpga-sim            = "fpga_board:main"
generate-board-images = "generate_board_images:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["amaranth-boards/"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade – modernise syntax
    "N",        # pep8-naming
    "B",        # flake8-bugbear – common bugs
    "ANN",      # missing type annotations
    "D",        # pydocstyle – docstring conventions
]
ignore = [
    "D203",     # conflicts with D211 (no-blank-line-before-class)
    "D213",     # conflicts with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]        # relax annotations + docstrings in tests
"sim_testbench.py" = ["ANN201"] # cocotb async test implicit return type
"sim/test_blinky.py" = ["ANN"]  # cocotb headless tests: dut signals are dynamic

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy (static type checker) ───────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["amaranth-boards/"]
disallow_incomplete_defs = true
disallow_untyped_defs = true
# strict = true  (future: evaluate after feature work settles)

[[tool.mypy.overrides]]
module = ["tests.*", "test_blinky"]
disallow_untyped_defs = false   # test functions and fixtures are exempt

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
