[project]
name = "fpga-simulator"
version = "0.2.0"
description = "Interactive FPGA board simulator with GHDL-backed VHDL simulation"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Richard Graham", email = "rickhg12hs@users.noreply.github.com"},
    {name = "Benjamin Graham", email = "29547812+benwilliamgraham@users.noreply.github.com"},
    {name = "Oliver Graham", email = "62159522+oliverhgraham@users.noreply.github.com"},
]
keywords = ["fpga", "vhdl", "simulation", "ghdl", "cocotb", "pygame"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "pygame>=2.6",
    "cocotb>=2.0",
    "find_libpython",
]

[project.urls]
Repository = "https://github.com/Machai-Kydoimos/fpga-board-sim"
Issues = "https://github.com/Machai-Kydoimos/fpga-board-sim/issues"

[project.scripts]
fpga-sim              = "fpga_sim.__main__:main"
generate-board-images = "fpga_sim.generate_board_images:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: requires GHDL or NVC subprocess (deselect with -m 'not slow')",
    "ui: requires headless pygame display",
]

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["amaranth-boards/"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade – modernise syntax
    "N",        # pep8-naming
    "B",        # flake8-bugbear – common bugs
    "ANN",      # missing type annotations
    "D",        # pydocstyle – docstring conventions
]
ignore = [
    "D203",     # conflicts with D211 (no-blank-line-before-class)
    "D213",     # conflicts with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]        # relax annotations + docstrings in tests
"sim/sim_testbench.py" = ["ANN201"] # cocotb async test implicit return type
"sim/test_blinky.py" = ["ANN"]  # cocotb headless tests: dut signals are dynamic

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy (static type checker) ───────────────────────────────────────────────
[tool.mypy]
mypy_path = ["src"]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["amaranth-boards/"]
disallow_incomplete_defs = true
disallow_untyped_defs = true
# strict = true  (future: evaluate after feature work settles)

[[tool.mypy.overrides]]
module = ["tests.*", "test_blinky"]
disallow_untyped_defs = false   # test functions and fixtures are exempt

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fpga_sim"]
