[project]
name = "fpga-simulator"
version = "0.13.0"
description = "Interactive FPGA board simulator with GHDL-backed VHDL simulation"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Richard Graham", email = "rickhg12hs@users.noreply.github.com"},
    {name = "Benjamin Graham", email = "29547812+benwilliamgraham@users.noreply.github.com"},
    {name = "Oliver Graham", email = "62159522+oliverhgraham@users.noreply.github.com"},
]
keywords = ["fpga", "vhdl", "simulation", "ghdl", "cocotb", "pygame"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "pygame>=2.6",
    "cocotb>=2.0",
    "find_libpython",
]

[project.urls]
Repository = "https://github.com/Machai-Kydoimos/fpga-board-sim"
Issues = "https://github.com/Machai-Kydoimos/fpga-board-sim/issues"

[project.scripts]
fpga-sim              = "fpga_sim.__main__:main"
generate-board-images = "fpga_sim.generate_board_images:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "mypy>=2.3.0",
    "ruff>=0.15.21",
    "pre-commit>=3",
    "jsonschema>=4.0",
    "pytest-randomly>=4.1.0",
    "rumdl>=0.2.32",
    "pillow>=12.3.0",
    # TOML reader for the embedded-core generator on Python 3.10; 3.11+ uses stdlib tomllib.
    "tomli>=2.0 ; python_version < '3.11'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: requires GHDL or NVC subprocess (deselect with -m 'not slow')",
    "ui: requires headless pygame display",
]

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["amaranth-boards/", "boards/"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade – modernise syntax
    "N",        # pep8-naming
    "B",        # flake8-bugbear – common bugs
    "ANN",      # missing type annotations
    "D",        # pydocstyle – docstring conventions
]
ignore = [
    "D203",     # conflicts with D211 (no-blank-line-before-class)
    "D213",     # conflicts with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]        # relax annotations + docstrings in tests
"sim/sim_testbench.py" = ["ANN201"] # cocotb async test implicit return type
"sim/test_blinky.py" = ["ANN"]  # cocotb headless tests: dut signals are dynamic
"sim/test_7seg.py" = ["ANN"]   # cocotb headless tests: dut signals are dynamic
"sim/test_cpu_walking.py" = ["ANN"]  # cocotb headless tests: dut signals are dynamic
"sim/test_cpu_hello.py" = ["ANN"]    # cocotb headless tests: dut signals are dynamic
"sim/test_cpu_dice.py" = ["ANN"]     # cocotb headless tests: dut signals are dynamic
"sim/test_stopwatch.py" = ["ANN"]    # cocotb headless tests: dut signals are dynamic
# these embed verbatim/near-verbatim real constraint-file excerpts as fixtures;
# line length is a property of the source format, not authored prose.
"tests/test_port_convention_parser_xdc.py" = ["E501"]
"tests/test_port_convention_parser_ucf.py" = ["E501"]
"tests/test_port_convention_parsers_golden.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy (static type checker) ───────────────────────────────────────────────
[tool.mypy]
mypy_path = ["src"]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["amaranth-boards/", "boards/"]
strict = true  # D8 (#125): full strict flip; supersedes the individual flags this used to list

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test_blinky",
    "test_7seg",
    "test_cpu_walking",
    "test_cpu_hello",
    "test_cpu_dice",
    "test_stopwatch",
]
disallow_untyped_defs = false   # test functions and fixtures are exempt

# ── rumdl (Markdown linter + formatter) ──────────────────────────────────────
[tool.rumdl]
# MD013 (line length): prose, tables, and long links read fine unwrapped, and
# hard-wrapping Markdown hurts diffs without helping rendering.
# MD036 (emphasis-as-heading): would rewrite bold/italic lead-ins and bylines
# into real headings, changing document structure and the TOC. Left to authors.
disable = ["MD013", "MD036"]
respect-gitignore = true         # skips memory/, .venv/, .pytest_cache/, etc.
exclude = [".git", ".github"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fpga_sim"]
